deployments/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: post-analyzer
  labels:
    app.kubernetes.io/part-of: post-analyzer
